0.20	Thursday 19th February, 2009
	Fix t/lib/Fully/Qualified.pm to have a 1; (Zefram)
	Ship t/09whitespace.t - had missed it before

0.19	Thursday 13th September, 2007
	Don't use _CvGV to determine if a sub was imported, there's a handy
	flag - GVf_IMPORTED_CV.  Fixes 5.9.5 and future perls
	(solution by Nicholas Clark)


0.18    Friday 4th August, 2006
	Rewrite _CvGV in terms of B::CV - no xs dependency anymore
	(suggested by Tim Bunce)

        Add the (FETCH|MODIFY)_$foo_ATTRIBUTES methods to the private
	stoplists. (rt #12451)

        Support documentation where the method name is documented in a
	::qualified style (rt #14635)

	Ignores new (5.8) magic CLONE and CLONE_SKIP methods. (rt #17489)

	Added a nonwhitespace option (Alex - rt #14950)


0.17	Tuesday 23rd November, 2004
	Fixed a further case reported by Jos Boumans where
    	=head2 $self->foo(); was intepreted as documentation for a
        C<foo()> method.  (more XS4ALL house style)

0.16	Wednesday 20th October, 2004
	Fixed a MANIFEST bug.
	Fixed a case reported by Jos Boumans where
    	=head2 $self->foo; was intepreted as documentation for a
        C<foo;> method.  (XS4ALL house style)
	
0.15	Tuesday 19th October, 2004
	Correctly ignores tie subroutines (David Cantrell)

0.14	Sunday 9th May, 2004
	Small fix from Andy Lester for when people entity escape
	the greater than in the method call arrow.

0.13	Monday 29th December, 2003
	Fixed a case reported by Earle Martin, where 
	=head2 C<foo(),bar(),baz()> wasn't working correctly

	Pod and Test fixes by Andy Lester

	Now we install the pod_cover command line utility.

0.12	Tuesday 30th September, 2003
	Added 'trustme' so that you don't have to lie about subs being private
	when the module fails to find their docs.  Work by David Cantrell.

	Pulled HISTORY out into a Changes file.

	Deprecated and gutted Pod::Coverage::Overloader.  The ignored
	patterns in the base class now include qr/^\(/ which is all it