@@ -78,9 +78,9 @@ qr/^import$/, qr/^DESTROY$/, qr/^AUTOLOAD$/, qr/^bootstrap$/,
              POP | PUSH | SHIFT | UNSHIFT | SPLICE | DELETE |
              EXISTS | EXTEND | CLEAR | FIRSTKEY | NEXTKEY | PRINT | PRINTF |
              WRITE | READLINE | GETC | READ | CLOSE | BINMODE | OPEN |
-             EOF | FILENO | SEEK | TELL)$/x,
+             EOF | FILENO | SEEK | TELL | SCALAR )$/x,
         qr/^( MODIFY | FETCH )_( REF | SCALAR | ARRAY | HASH | CODE |
-                                 GLOB | FORMAT | IO)_ATTRIBUTES$/x,
+                                 GLOB | FORMAT | IO )_ATTRIBUTES$/x,
         qr/^CLONE(_SKIP)?$/,
 ]
 
@@ -119,7 +119,7 @@ sub new {
              POP | PUSH | SHIFT | UNSHIFT | SPLICE | DELETE |
              EXISTS | EXTEND | CLEAR | FIRSTKEY | NEXTKEY | PRINT | PRINTF |
              WRITE | READLINE | GETC | READ | CLOSE | BINMODE | OPEN |
-             EOF | FILENO | SEEK | TELL)$/x,
+             EOF | FILENO | SEEK | TELL | SCALAR )$/x,
         qr/^( MODIFY | FETCH )_( REF | SCALAR | ARRAY | HASH | CODE |
                                  GLOB | FORMAT | IO)_ATTRIBUTES $/x,
         qr/^CLONE(_SKIP)?$/,
